--- a/sistema-de-cadastro/src/main/resources/templates/cliente/lista.html
+++ b/sistema-de-cadastro/src/main/resources/templates/cliente/lista.html
@@ -38,7 +38,7 @@
      </tbody>
  </table>
       <div th:replace="fragments/modal :: modal"></div>
-    
+    <div> <br></div>
  </section>
 	
 </body>
